--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
-node_modules*
+# Node.js
+node_modules/
+npm-debug.log
+.env
+
+# VS Code
+.vscode/
+
+# MacOS
+.DS_Store
+
+# Logs
+*.log
+
+# Build and coverage directories
+/dist
+/coverage
+
+# dotenv
 .env
