--- a/backend/package.json
+++ b/backend/package.json
@@ -3,14 +3,16 @@
   "name": "evangadi-forum",
   "version": "1.0.0",
   "description": "Your project description",
-  "main": "src/server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node server.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.22.1",
-    "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.16.0",
     "nodejs": "^0.0.0"
   }
